CI 검증 경로 정비 되돌리기