@@ -1,31 +1,29 @@
 package stock.social_service.service;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import stock.social_service.client.NewsfeedServiceClient;
+import org.springframework.kafka.core.KafkaTemplate;
+
+import stock.social_service.model.Post;
 import stock.social_service.kafka.SocialEvent;
 import stock.social_service.model.Comment;
-import stock.social_service.model.Post;
+import stock.social_service.repository.PostRepository;
 import stock.social_service.repository.CommentRepository;
 import stock.social_service.repository.FollowRepository;
-import stock.social_service.repository.PostRepository;
 
-import java.util.List;
 import java.util.Optional;
+import java.util.Arrays;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.argThat;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
 
 @SpringBootTest
 class SocialServiceTest {
@@ -43,29 +41,31 @@ class SocialServiceTest {
     private FollowRepository followRepository;
 
     @MockBean
-    private NewsfeedServiceClient newsfeedServiceClient;
+    private KafkaTemplate<String, SocialEvent> kafkaTemplate;
+
+    @BeforeEach
+    void setup() {
+        // Setup mock behavior if needed
+    }
 
     @Test
     void testCreatePost() {
         Post post = new Post();
         post.setId(1L);
         post.setUserId(1L);
-        post.setTitle("Test title");
         post.setContent("Test post");
-        post.setStockId(10L);
 
         when(postRepository.save(any(Post.class))).thenReturn(post);
 
-        Post createdPost = socialService.createPost(1L, "Test title", "Test post", 10L);
+        Post createdPost = socialService.createPost(post.getUserId(), post.getContent());
 
         assertNotNull(createdPost);
-        assertEquals("Test title", createdPost.getTitle());
         assertEquals("Test post", createdPost.getContent());
         verify(postRepository).save(any(Post.class));
-        verify(newsfeedServiceClient).postCreated(argThat(event ->
-                "POST_CREATED".equals(event.getType()) &&
-                        Long.valueOf(1L).equals(event.getUserId()) &&
-                        Long.valueOf(1L).equals(event.getTargetId())
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "POST_CREATED".equals(event.getType()) &&
+            post.getUserId().equals(event.getUserId()) &&
+            post.getId().equals(event.getTargetId())
         ));
     }
 
@@ -79,14 +79,13 @@ class SocialServiceTest {
         post2.setUserId(userId);
         post2.setContent("Test post 2");
 
-        when(postRepository.findByUserId(userId, PageRequest.of(0, 10)))
-                .thenReturn(new PageImpl<>(List.of(post1, post2)));
+        when(postRepository.findByUserId(userId)).thenReturn(Arrays.asList(post1, post2));
 
-        Page<Post> posts = socialService.getPostsByUserId(userId, PageRequest.of(0, 10));
+        List<Post> posts = socialService.getPostsByUserId(userId);
 
-        assertEquals(2, posts.getContent().size());
-        assertEquals("Test post 1", posts.getContent().get(0).getContent());
-        assertEquals("Test post 2", posts.getContent().get(1).getContent());
+        assertEquals(2, posts.size());
+        assertEquals("Test post 1", posts.get(0).getContent());
+        assertEquals("Test post 2", posts.get(1).getContent());
     }
 
     @Test
@@ -98,66 +97,51 @@ class SocialServiceTest {
         post.setContent("Test post");
 
         Comment comment = new Comment();
-        comment.setId(2L);
         comment.setUserId(2L);
         comment.setContent("Test comment");
-        comment.setPost(post);
 
         when(postRepository.findById(postId)).thenReturn(Optional.of(post));
         when(commentRepository.save(any(Comment.class))).thenReturn(comment);
-        when(postRepository.save(any(Post.class))).thenReturn(post);
 
-        Comment addedComment = socialService.addComment(2L, postId, "Test comment");
+        Comment addedComment = socialService.addComment(postId, comment.getUserId(), comment.getContent());
 
         assertNotNull(addedComment);
         assertEquals("Test comment", addedComment.getContent());
         verify(commentRepository).save(any(Comment.class));
-        verify(newsfeedServiceClient).commentCreated(argThat(event ->
-                "COMMENT_ADDED".equals(event.getType()) &&
-                        Long.valueOf(2L).equals(event.getUserId()) &&
-                        Long.valueOf(postId).equals(event.getTargetId()) &&
-                        Long.valueOf(2L).equals(event.getAdditionalId())
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "COMMENT_ADDED".equals(event.getType()) &&
+            comment.getUserId().equals(event.getUserId()) &&
+            postId.equals(event.getTargetId())
         ));
     }
 
     @Test
     void testFollowUser() {
         Long followerId = 1L;
-        Long followeeId = 2L;
-        Post latestPost = new Post();
-        latestPost.setId(3L);
-        latestPost.setUserId(followeeId);
+        Long followedId = 2L;
 
-        when(followRepository.existsByFollowerIdAndFolloweeId(followerId, followeeId)).thenReturn(false);
-        when(postRepository.findTopByUserIdAndParentIsNullOrderByCreatedAtDesc(followeeId)).thenReturn(latestPost);
-
-        socialService.follow(followerId, followeeId);
+        socialService.followUser(followerId, followedId);
 
         verify(followRepository).save(any());
-        verify(newsfeedServiceClient).userFollowed(argThat(event ->
-                "USER_FOLLOWED".equals(event.getType()) &&
-                        followerId.equals(event.getUserId()) &&
-                        followeeId.equals(event.getTargetId())
-        ));
-        verify(newsfeedServiceClient).followerActivity(argThat(event ->
-                "FOLLOWER_ACTIVITY".equals(event.getType()) &&
-                        followerId.equals(event.getUserId()) &&
-                        latestPost.getId().equals(event.getTargetId())
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "USER_FOLLOWED".equals(event.getType()) &&
+            followerId.equals(event.getUserId()) &&
+            followedId.equals(event.getTargetId())
         ));
     }
 
     @Test
     void testUnfollowUser() {
         Long followerId = 1L;
-        Long followeeId = 2L;
+        Long followedId = 2L;
 
-        socialService.unfollow(followerId, followeeId);
+        socialService.unfollowUser(followerId, followedId);
 
-        verify(followRepository).deleteByFollowerIdAndFolloweeId(followerId, followeeId);
-        verify(newsfeedServiceClient).userUnfollowed(argThat(event ->
-                "USER_UNFOLLOWED".equals(event.getType()) &&
-                        followerId.equals(event.getUserId()) &&
-                        followeeId.equals(event.getTargetId())
+        verify(followRepository).deleteByFollowerIdAndFollowedId(followerId, followedId);
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "USER_UNFOLLOWED".equals(event.getType()) &&
+            followerId.equals(event.getUserId()) &&
+            followedId.equals(event.getTargetId())
         ));
     }
 
@@ -173,14 +157,14 @@ class SocialServiceTest {
         when(postRepository.findById(postId)).thenReturn(Optional.of(post));
         when(postRepository.save(any(Post.class))).thenReturn(post);
 
-        socialService.likePost(userId, postId);
+        socialService.likePost(postId, userId);
 
         assertTrue(post.getLikes().contains(userId));
         verify(postRepository).save(post);
-        verify(newsfeedServiceClient).postLiked(argThat(event ->
-                "POST_LIKED".equals(event.getType()) &&
-                        userId.equals(event.getUserId()) &&
-                        postId.equals(event.getTargetId())
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "POST_LIKED".equals(event.getType()) &&
+            userId.equals(event.getUserId()) &&
+            postId.equals(event.getTargetId())
         ));
     }
 
@@ -197,14 +181,14 @@ class SocialServiceTest {
         when(postRepository.findById(postId)).thenReturn(Optional.of(post));
         when(postRepository.save(any(Post.class))).thenReturn(post);
 
-        socialService.unlikePost(userId, postId);
+        socialService.unlikePost(postId, userId);
 
         assertFalse(post.getLikes().contains(userId));
         verify(postRepository).save(post);
-        verify(newsfeedServiceClient).postUnliked(argThat(event ->
-                "POST_UNLIKED".equals(event.getType()) &&
-                        userId.equals(event.getUserId()) &&
-                        postId.equals(event.getTargetId())
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "POST_UNLIKED".equals(event.getType()) &&
+            userId.equals(event.getUserId()) &&
+            postId.equals(event.getTargetId())
         ));
     }
 
@@ -225,33 +209,46 @@ class SocialServiceTest {
     }
 
     @Test
+    void testCreateFollowerActivity() {
+        Long followerId = 1L;
+        Long followedId = 2L;
+        Post latestPost = new Post();
+        latestPost.setId(3L);
+        latestPost.setUserId(followedId);
+
+        when(postRepository.findTopByUserIdOrderByCreatedAtDesc(followedId)).thenReturn(latestPost);
+
+        socialService.createFollowerActivity(followerId, followedId);
+
+        verify(kafkaTemplate).send(eq("social-events"), argThat(event -> 
+            "FOLLOWER_ACTIVITY".equals(event.getType()) &&
+            followerId.equals(event.getUserId()) &&
+            latestPost.getId().equals(event.getTargetId())
+        ));
+    }
+
+    @Test
     void testGetPostsWithActivity() {
         Long userId = 1L;
         Post post1 = new Post();
         post1.setId(1L);
         post1.setUserId(userId);
         post1.setContent("Test post 1");
-        post1.getComments().add(new Comment());
-        post1.getComments().add(new Comment());
-        post1.getLikes().add(2L);
-
         Post post2 = new Post();
         post2.setId(2L);
         post2.setUserId(userId);
         post2.setContent("Test post 2");
-        post2.getComments().add(new Comment());
-        post2.getLikes().add(2L);
-        post2.getLikes().add(3L);
 
-        when(postRepository.findByUserId(userId, PageRequest.of(0, 10)))
-                .thenReturn(new PageImpl<>(List.of(post1, post2)));
+        when(postRepository.findByUserId(userId)).thenReturn(Arrays.asList(post1, post2));
+        when(commentRepository.countByPostId(1L)).thenReturn(2L);
+        when(commentRepository.countByPostId(2L)).thenReturn(1L);
 
-        Page<Post> postsWithActivity = socialService.getPostsWithActivity(userId, PageRequest.of(0, 10));
+        List<Post> postsWithActivity = socialService.getPostsWithActivity(userId);
 
-        assertEquals(2, postsWithActivity.getContent().size());
-        assertEquals(2, postsWithActivity.getContent().get(0).getCommentCount());
-        assertEquals(1, postsWithActivity.getContent().get(0).getLikeCount());
-        assertEquals(1, postsWithActivity.getContent().get(1).getCommentCount());
-        assertEquals(2, postsWithActivity.getContent().get(1).getLikeCount());
+        assertEquals(2, postsWithActivity.size());
+        assertEquals(2, postsWithActivity.get(0).getCommentCount());
+        assertEquals(1, postsWithActivity.get(1).getCommentCount());
+        verify(postRepository).findByUserId(userId);
+        verify(commentRepository, times(2)).countByPostId(anyLong());
     }
 }
